style: via https://startbootstrap.com/template/blog-post

--- a/src/_components/footer.liquid
+++ b/src/_components/footer.liquid
@@ -1,3 +1,7 @@
-<footer>
-  Contact me at <a href="mailto:{{ metadata.email }}">{{ metadata.email }}</a>
+<footer class="py-5 bg-dark">
+  <div class="container">
+    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+    {% comment %} Contact me at <a href="mailto:{{ metadata.email }}">{{ metadata.email }}</a> {% endcomment %}
+  </div>
+  <!-- /.container -->
 </footer>
