--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -5,6 +5,7 @@ body {
   background: $body-background;
   color: $body-color;
   font-family: sans-serif;
+  padding-top: 56px;
 }
 
 h1, nav, footer {
