--- a/src/_layouts/page.liquid
+++ b/src/_layouts/page.liquid
@@ -19,7 +19,7 @@ layout: default
 <hr>
 
 <!-- Preview Image -->
-<img class="img-fluid rounded" src="http://placehold.it/900x300" alt="">
+<img class="img-fluid rounded" src="https://picsum.photos/900/300" alt="">
 
 <hr>
 
