--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- Title -->
-<h1 class="mt-4">{{ page.title }}</h1>
+<h1 class="mt-4"><%= page.try(:title) %></h1>
 
 <!-- Author -->
 <p class="lead">
@@ -21,7 +21,15 @@ layout: default
 <!-- Preview Image -->
 <img class="img-fluid rounded" src="https://picsum.photos/900/300" alt="">
 
-<hr>
-
 <!-- Post Content -->
-{{ content }}
+<div class="card">
+  <div class="card-body">
+    <%= markdownify layout.data[:list] %>
+  </div>
+</div>
+
+<div class="card">
+  <div class="card-body">
+    <%= yield %>
+  </div>
+</div>
