--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -3,19 +3,7 @@ layout: default
 ---
 
 <!-- Title -->
-<h1 class="mt-4"><%= page.try(:title) %></h1>
-
-<!-- Author -->
-<p class="lead">
-  by
-  <a href="#">Start Bootstrap</a>
-</p>
-
-<hr>
-
-<!-- Date/Time -->
-<p>Posted on January 1, 2019 at 12:00 PM</p>
-
+<h1 class="mt-4"><%= page.data[:title] %></h1>
 <hr>
 
 <!-- Preview Image -->
