--- a/src/_components/head.liquid
+++ b/src/_components/head.liquid
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="{{ metadata.description }}" />
-<meta name="author" content="">
+<meta name="author" content="Jamie Macey">
 
 <title>{% if page_title != "" %}{{ page_title | escape }} | {{ metadata.title | escape }}{% else %}{{ metadata.title | escape }}: {{ metadata.tagline | escape }}{% endif %}</title>
 
