render: a sane ingredient list helper

--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -13,7 +13,7 @@ layout: default
 <div class="card">
   <div class="card-body">
     <h3 class="card-title">Ingredients</h3>
-    <%= markdownify layout.data[:list] %>
+    <%= listify layout.data[:list] %>
   </div>
 </div>
 
