--- a/src/_layouts/page.erb
+++ b/src/_layouts/page.erb
@@ -4,21 +4,25 @@ layout: default
 
 <!-- Title -->
 <h1 class="mt-4"><%= page.data[:title] %></h1>
-<hr>
 
-<!-- Preview Image -->
-<img class="img-fluid rounded" src="https://picsum.photos/900/300" alt="">
-
-<!-- Post Content -->
-<div class="card">
-  <div class="card-body">
-    <h3 class="card-title">Ingredients</h3>
-    <%= render IngredientList.new(layout.data[:list]) %>
+<div class="row">
+  <div class="col-12">
+    <!-- Preview Image -->
+    <img class="img-fluid rounded mb-4 mx-auto w-100 text-center" src="https://picsum.photos/900/300" alt="">
   </div>
-</div>
 
-<div class="card">
-  <div class="card-body">
+  <!-- Ingredients -->
+  <div class="col-lg-5 order-lg-last mb-3">
+    <div class="card">
+      <div class="card-body">
+        <h3 class="card-title">Ingredients</h3>
+        <%= render IngredientList.new(layout.data[:list]) %>
+      </div>
+    </div>
+  </div>
+
+  <!-- Method Column -->
+  <div class="col-lg-7">
     <h3 class="card-title">Method</h3>
     <%= yield %>
   </div>
