--- a/src/_components/navbar.liquid
+++ b/src/_components/navbar.liquid
@@ -1,22 +1,32 @@
-<a class="navbar-brand" href="#">{{ metadata.title }}</a>
+<a class="navbar-brand" href="/">{{ metadata.title }}</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"></span>
 </button>
 <div class="collapse navbar-collapse" id="navbarResponsive">
   <ul class="navbar-nav ml-auto">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Home
-        <span class="sr-only">(current)</span>
-      </a>
-    </li>
+    <!-- TODO: active -->
     <li class="nav-item">
-      <a class="nav-link" href="#">About</a>
+      <a class="nav-link" href="/breakast/">Breakfast</a>
     </li>
+
     <li class="nav-item">
-      <a class="nav-link" href="#">Services</a>
+      <a class="nav-link" href="/lunch/">Lunch</a>
     </li>
+
     <li class="nav-item">
-      <a class="nav-link" href="#">Contact</a>
+      <a class="nav-link" href="/dinner/">Dinner</a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link" href="/dessert/">Dessert</a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link" href="/appetizer/">Appetizer</a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link" href="/side/">Side</a>
     </li>
   </ul>
 </div>
