--- a/src/index.erb
+++ b/src/index.erb
@@ -2,18 +2,17 @@
 layout: default
 ---
 
-<!-- Title -->
 <h1 class="mt-4">Recipe Book</h1>
 
 <div class="row">
-  <% %w[Breakfast Lunch Dinner Dessert Appetizer Side].each do |category| %>
+  <% %w[breakfast lunch dinner dessert appetizer side].each do |category| %>
     <div class="col-6 col-lg-4">
-      <a href="/<%= category.downcase %>/">
+      <a href="/<%= category %>/">
         <div class="card my-2">
           <img class="card-img-top" src="https://picsum.photos/300/200" alt="">
           <div class="card-body">
             <h4 class="card-title text-center">
-              <%= category %>
+              <%= category.titleize %>
             </h4>
           </div>
         </div>
