--- a/src/category.erb
+++ b/src/category.erb
@@ -11,7 +11,7 @@ prototype:
 <div class="row">
   <% paginator.documents.each do |recipe| %>
     <div class="col-12 col-md-6 col-lg-4">
-      <a href="/<%= recipe.relative_url %>/">
+      <a href="<%= recipe.relative_url %>">
         <div class="card my-2">
           <img class="card-img-top d-none d-sm-block" src="https://picsum.photos/300/200" alt="">
           <div class="card-body">
