--- a/src/_layouts/default.erb
+++ b/src/_layouts/default.erb
@@ -20,7 +20,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <%= liquid_render "navbar", metadata: site.metadata, page: page %>
+      <%= render "navbar", metadata: site.metadata, page: page %>
     </div>
   </nav>
 
