--- a/src/category.erb
+++ b/src/category.erb
@@ -13,7 +13,11 @@ prototype:
     <div class="col-12 col-md-6 col-lg-4">
       <a href="<%= recipe.relative_url %>">
         <div class="card my-2">
-          <img class="card-img-top d-none d-sm-block" src="https://picsum.photos/300/200" alt="">
+          <% if recipe.data["image"] %>
+            <div class="card-img-top d-none d-sm-block ratio ratio-16x9">
+              <img style="object-fit: cover;" src="<%= recipe.data["image"] %>" alt="">
+            </div>
+          <% end %>
           <div class="card-body">
             <h4 class="card-title text-center mb-0">
               <%= recipe.data["title"] %>
