Fix header styling

--- a/src/_layouts/recipe.erb
+++ b/src/_layouts/recipe.erb
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- Title -->
-<h1 class="mt-4"><%= page.data[:title] %></h1>
+<h1><%= page.data[:title] %></h1>
 
 <div class="row">
   <% if page.data["image"] %>
