--- a/src/category.erb
+++ b/src/category.erb
@@ -6,7 +6,7 @@ prototype:
   collection: pages
 ---
 
-<h1 class="mt-4"><%= page.data["title"] %></h1>
+<h1><%= page.data["title"] %></h1>
 
 <div class="row">
   <% paginator.documents.each do |recipe| %>
