--- a/src/index.erb
+++ b/src/index.erb
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<h1 class="mt-4">Recipe Book</h1>
+<h1>Recipe Book</h1>
 
 <div class="row">
   <% %w[breakfast lunch dinner dessert appetizer side].each do |category| %>
