Fixup frontmatter/pagination for Bridgetown 1.x

--- a/src/category.erb
+++ b/src/category.erb
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: :prototype-term-titleize Recipes
+title: ":prototype-term-titleize Recipes"
 prototype:
   term: category
   collection: pages
@@ -9,7 +9,7 @@ prototype:
 <h1><%= page.data["title"] %></h1>
 
 <div class="row">
-  <% paginator.documents.each do |recipe| %>
+  <% paginator.resources.each do |recipe| %>
     <div class="col-12 col-md-6 col-lg-4">
       <a href="<%= recipe.relative_url %>">
         <div class="card my-2">
@@ -25,6 +25,6 @@ prototype:
           </div>
         </div>
       </a>
-    </div>  
+    </div>
   <% end %>
 </div>
