Avoid layout bleed

--- a/src/_layouts/recipe.erb
+++ b/src/_layouts/recipe.erb
@@ -20,7 +20,7 @@ layout: default
     <div class="card">
       <div class="card-body">
         <h3 class="card-title">Ingredients</h3>
-        <%= render "ingredients", items: layout.data[:list] %>
+        <%= render "ingredients", items: page.data[:list] %>
       </div>
     </div>
   </div>
