--- a/src/_layouts/recipe.erb
+++ b/src/_layouts/recipe.erb
@@ -16,6 +16,7 @@ layout: default
   <% end %>
 
   <!-- Ingredients -->
+  <% if page.data[:list] %>
   <div class="col-lg-5 order-lg-last mb-3">
     <div class="card">
       <div class="card-body">
@@ -24,6 +25,17 @@ layout: default
       </div>
     </div>
   </div>
+  <% end %>
+  <% if page.data[:cook_json] %>
+    <div class="col-lg-5 order-lg-last mb-3">
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title">Ingredients</h3>
+          <%= render "ingredients", items: page.data[:cook_json]['ingredients'] %>
+        </div>
+      </div>
+    </div>
+  <% end %>
 
   <!-- Method Column -->
   <div class="col-lg-7">
