--- a/src/_partials/_ingredients.erb
+++ b/src/_partials/_ingredients.erb
@@ -1,7 +1,16 @@
 <dl class="row">
-  <% items.to_s.split("\n").each do |item| %>
-    <% first, last = item.split(/\s*:\s*/) %>
-    <dt class="col-sm-3 text-sm-right"><%= first %></dt>
-    <dd class="col-sm-9 ml-3 ml-sm-auto"><%= last %></dd>
+  <% if items.is_a?(Array) %>
+    <!-- Cooklang -->
+    <% items.each do |item| %>
+      <dt class="col-sm-3 text-sm-right"><%= item['amount'] %></dt>
+      <dd class="col-sm-9 ml-3 ml-sm-auto"><%= item['name'] %></dd>
+    <% end %>
+  <% else %>
+    <!-- Legacy -->
+    <% items.to_s.split("\n").each do |item| %>
+      <% first, last = item.split(/\s*:\s*/) %>
+      <dt class="col-sm-3 text-sm-right"><%= first %></dt>
+      <dd class="col-sm-9 ml-3 ml-sm-auto"><%= last %></dd>
+    <% end %>
   <% end %>
 </dl>
