--- a/src/_partials/_navbar.erb
+++ b/src/_partials/_navbar.erb
@@ -5,8 +5,9 @@
 <div class="collapse navbar-collapse" id="navbarResponsive">
   <ul class="navbar-nav ml-auto">
     <% %w[breakfast lunch dinner dessert appetizer side].each do |category| %>
-      <li class="nav-item <%= "active" if page.data["title"] == "#{category.titleize} Recipes" %>">
-        <a class="nav-link" href="/<%= category %>/"><%= category.titleize %></a>
+      <% active = (page.data["title"] == "#{category.titleize} Recipes") || (page.data['category'] == category) %>
+      <li class="nav-item">
+        <a class="nav-link <%= "active" if active %>" href="/<%= category %>/"><%= category.titleize %></a>
       </li>
     <% end %>
   </ul>
