--- a/src/_layouts/default.erb
+++ b/src/_layouts/default.erb
@@ -12,8 +12,9 @@
   <!-- Bootstrap core style -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="<%= webpack_path "css" %>" />
-  <script src="<%= webpack_path "js" %>" defer></script>
+  <link rel="stylesheet" href="<%= asset_path 'css' %>" />
+  <script src="<%= asset_path 'js' %>" defer></script>
+  <%= live_reload_dev_js %>
 </head>
 
 <body>
