Improve recipe layout

--- a/src/_layouts/default.erb
+++ b/src/_layouts/default.erb
@@ -26,8 +26,7 @@
   </nav>
 
   <!-- Page Content -->
-  <div class="container">
-    <br class="mt-5 pt-4">
+  <div class="container mt-3 pt-5">
     <%= yield %>
   </div>
 
