--- a/src/_layouts/recipe.erb
+++ b/src/_layouts/recipe.erb
@@ -3,33 +3,34 @@ layout: default
 ---
 
 <!-- Title -->
-<h1><%= page.data[:title] %></h1>
-
-<div class="row">
+<div class="row border-bottom pb-4 mb-4 mt-2">
   <% if page.data["image"] %>
-    <div class="col-12 ratio ratio-21x9">
+    <div class="col-lg ratio ratio-21x9">
       <!-- Preview Image -->
-      <img style="object-fit: cover;" class="img-fluid rounded pb-4 mx-auto w-100" src="<%= page.data["image"] %>" alt="">
+      <img style="object-fit: cover;" class="img-fluid rounded mx-auto w-100" src="<%= page.data["image"] %>" alt="">
+    </div>
+    <div class="col-lg-4 position-relative" style="min-height: 70px;">
+      <h1 class="position-absolute top-50 start-50 translate-middle w-100 text-center"><%= page.data[:title] %></h1>
     </div>
   <% else %>
-    <hr/>
+    <div class="col p-5 position-relative">
+      <h1 class="position-absolute top-50 start-50 translate-middle w-100 text-center"><%= page.data[:title] %></h1>
+    </div>
   <% end %>
+</div>
 
+<div class="row">
   <!-- Ingredients -->
   <% if page.data[:cook_json] %>
-    <div class="col-lg-5 order-lg-last mb-3">
-      <div class="card">
-        <div class="card-body">
-          <h3 class="card-title">Ingredients</h3>
-          <%= render "ingredients", items: page.data[:cook_json]['ingredients'] %>
-        </div>
-      </div>
+    <div class="col-lg-5 mb-3">
+      <h3 class="card-title">Ingredients</h3>
+      <%= render "ingredients", items: page.data[:cook_json]['ingredients'] %>
     </div>
   <% end %>
 
   <!-- Method Column -->
-  <div class="col-lg-7">
-    <h3 class="card-title">Method</h3>
+  <div class="col-lg-7 border-start">
+    <h3 class="card-title">Instructions</h3>
     <%= yield %>
   </div>
 </div>
