--- a/src/_layouts/default.erb
+++ b/src/_layouts/default.erb
@@ -8,7 +8,8 @@
   <meta name="author" content="Jamie Macey">
 
   <title><%= [page.data["title"], site.metadata.title].compact.join(" | ") %></title>
-
+  <link rel="manifest" href="/app.webmanifest">
+  
   <!-- Bootstrap core style -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
